tests/neg/unsafe-dollar-in-name.scala
import language.experimental.safe

object Foo$ // error

class `Bar$` // error
